--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tinymce/tinymce-react": "^4.3.2",
     "antd": "^5.14.0",
     "axios": "^1.6.7",
     "dropify": "^0.2.2",
